added favorite page to view pokemon

--- a/favorite_page.html
+++ b/favorite_page.html
@@ -10,8 +10,10 @@
 
 <body>
     <div id="content-container">
-        <h1>Favorite Pokémon</h1>
-        <div id="favorites-container"></div>
+        <h1>My favorite Pokémon</h1>
+        <div id="favorites-container">
+            <!-- kort skapas i favorite js -->
+        </div>
     </div>
     <script src="favorite.js"></script>
 </body>
