add styling to buttons

--- a/favorite_page.html
+++ b/favorite_page.html
@@ -11,6 +11,9 @@
 <body>
     <div id="content-container">
         <h1>My favorite Pokémon</h1>
+        <a href="index.html">
+            <button id="home-button">Go back to home page</button>
+        </a>
         <div id="favorites-container">
             <!-- kort skapas i favorite js -->
         </div>
