--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <section class="favorites">
       <a href="favorite_page.html">
-        <button class="favorite-list">Favorite pokémons</button>
+        <button id="favorite-button">Favorite pokémons</button>
       </a>
     </section>
 
@@ -35,7 +35,7 @@
       <p><strong>Special Defense:</strong> <span id="special-defense"></span></p>
       <p><strong>Speed:</strong> <span id="speed"></span></p>
     </div>
-    <button class="favorite">Add to favorite</button>
+    <button id="add-favorite-button">Add to favorite</button>
 
     <script src="script.js"></script>
 </body>
