fix placeholder text

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <div id="content-container">
     <h1>Pokémon Search App</h1>
     <div id="search-container">
-      <input type="text" id="search-input" placeholder="search for a pokemon" required>
+      <input type="text" id="search-input" placeholder="Search for a Pokémon" required>
       <button id="search-button">Search</button>
     </div>
 
